<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:transitionName="@string/test_workout_item_detail_transition_name">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_manage_workout_text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_manage_workout_text_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/fragment_workout_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/fragment_manage_workout_text_title"
            app:layout_constraintStart_toStartOf="@+id/fragment_manage_workout_text_title"
            app:layout_constraintTop_toBottomOf="@+id/fragment_manage_workout_text_title" />

        <TextView
            android:id="@+id/fragment_manage_workout_text_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/fragment_manage_workout_text_name"
            app:layout_constraintEnd_toStartOf="@+id/fragment_manage_workout_text_is_active"
            app:layout_constraintStart_toStartOf="@+id/fragment_workout_divider"
            app:layout_constraintTop_toBottomOf="@+id/fragment_workout_divider" />

        <EditText
            android:id="@+id/fragment_manage_workout_edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="@+id/fragment_manage_workout_text_name"
            app:layout_constraintStart_toStartOf="@+id/fragment_manage_workout_text_name"
            app:layout_constraintTop_toBottomOf="@+id/fragment_manage_workout_text_name" />

        <TextView
            android:id="@+id/fragment_manage_workout_text_is_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_manage_workout_text_is_active"
            app:layout_constraintEnd_toEndOf="@+id/fragment_manage_workout_text_title"
            app:layout_constraintTop_toTopOf="@+id/fragment_manage_workout_text_name" />

        <Switch
            android:id="@+id/fragment_manage_workout_switch_is_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_manage_workout_edit_name"
            app:layout_constraintEnd_toEndOf="@+id/fragment_manage_workout_text_is_active"
            app:layout_constraintTop_toBottomOf="@+id/fragment_manage_workout_text_is_active" />

        <Button
            android:id="@+id/fragment_manage_workout_button_add_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_manage_workout_text_manage_exercises"
            app:layout_constraintEnd_toEndOf="@+id/fragment_workout_divider"
            app:layout_constraintTop_toBottomOf="@+id/fragment_manage_workout_edit_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_manage_workout_recyclerview_exercise"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/fragment_manage_workout_button_add_exercise"
            app:layout_constraintStart_toStartOf="@+id/fragment_manage_workout_text_list_title"
            app:layout_constraintTop_toBottomOf="@+id/fragment_manage_workout_button_add_exercise" />

        <TextView
            android:id="@+id/fragment_manage_workout_text_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_manage_workout_text_exercises"
            app:layout_constraintBottom_toBottomOf="@+id/fragment_manage_workout_button_add_exercise"
            app:layout_constraintStart_toStartOf="@+id/fragment_manage_workout_edit_name"
            app:layout_constraintTop_toTopOf="@+id/fragment_manage_workout_button_add_exercise" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
